Further fixes to background image on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
   background-image: url(./assets/background.png);
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  min-height: 100%;
 }
 
 .App {
